--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "engines": {
+    "node": "10.16.3",
+    "yarn": "1.7.0"
   }
 }
