--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "prettier": "^1.18.2"
   },
   "keywords": [
@@ -47,9 +48,5 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "engines": {
-    "node": "13.0.1",
-    "yarn": "1.19.1"
   }
 }
