--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.16.0",
     "gatsby-image": "^2.2.28",
     "gatsby-paginate": "^1.1.1",
+    "gatsby-plugin-catch-links": "^2.1.17",
     "gatsby-plugin-manifest": "^2.2.22",
     "gatsby-plugin-offline": "^3.0.15",
     "gatsby-plugin-react-helmet": "^3.1.12",
