--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "gatsby-plugin-offline": "^3.0.15",
     "gatsby-plugin-react-helmet": "^3.1.12",
     "gatsby-plugin-sass": "^2.1.20",
-    "gatsby-plugin-sharp": "^2.2.30",
+    "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.1.32",
     "gatsby-source-filesystem": "^2.1.32",
     "gatsby-source-wordpress": "^3.1.43",
-    "gatsby-transformer-sharp": "^2.2.22",
+    "gatsby-transformer-remark": "^2.6.37",
+    "gatsby-transformer-sharp": "^2.3.5",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
