--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.32",
+    "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-source-filesystem": "^2.1.32",
     "gatsby-source-wordpress": "^3.1.43",
     "gatsby-transformer-remark": "^2.6.37",
     "gatsby-transformer-sharp": "^2.3.5",
+    "lazysizes": "^5.2.0-beta1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
