package.json changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Zestard Technologies Private Limited",
+  "name": "zestard-technologies",
   "private": true,
   "description": "Offshore Website Design & Development Company | Zestard Technologies",
   "version": "0.1.0",
