--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-offline": "^3.0.15",
     "gatsby-plugin-react-helmet": "^3.1.12",
     "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-plugin-scroll-reveal": "0.0.4",
     "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.32",
